# matrix_rust_sdk_bridge

./: .gitignore  LICENSE  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  (+1 more)
rust/: .gitignore  Cargo.toml
rust/docs/: errorhandling.md  hasesvectors.md
rust/session_db/: matrix-sdk-crypto.sqlite3-shm  matrix-sdk-crypto.sqlite3-wal  matrix-sdk-event-cache.sqlite3  matrix-sdk-event-cache.sqlite3-shm  matrix-sdk-event-cache.sqlite3-wal  matrix-sdk-media.sqlite3-shm  matrix-sdk-media.sqlite3-wal  matrix-sdk-state.sqlite3-shm  matrix-sdk-state.sqlite3-wal
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  okra_wrap.rs
rust/src/core/: app_context.rs  mod.rs
rust/src/core/common/matrix_client_management/: matrix_client_context.rs  matrix_client_context_factory.rs  matrix_client_registry.rs
rust/src/core/error/: failure.rs
rust/src/core/network/: connection_checher.rs
rust/src/features/auth/: mod.rs
rust/src/features/auth/data/datasources/: auth_remote_data_source.rs
rust/src/features/auth/data/repositories/: auth_repository_impl.rs
rust/src/features/auth/domain/repositories/: auth_repository.rs
rust/src/features/auth/usecases/: login_matrix.rs  login_matrix_with_password.rs  restore_matrix_session.rs
rust/src/features/events/: ai_handler.rs  application.rs  conversation_handler.rs  domain.rs  infraestructure.rs  mod.rs
rust/src/features/events/domain/: domain.rs
rust/src/features/events/infraestructure/: infraestructure.rs  matrix_conversation_gateway.rs  sqlx_conversation_resolver.rs
rust/src/features/matrix_client_registry/: mod.rs
rust/src/features/matrix_client_registry/data/datasources/: registry_remote_data_source.rs
rust/src/features/matrix_client_registry/data/models/: registry_session_model.rs
rust/src/features/matrix_client_registry/data/repositories/: registry_repository_impl.rs
rust/src/features/matrix_client_registry/domain/entities/: registry_session.rs
rust/src/features/matrix_client_registry/domain/repositories/: registry_repository.rs
rust/src/features/matrix_client_registry/usecases/: register_matrix_client.rs
rust/src/features/rooms/: mod.rs
rust/src/features/rooms/data/datasources/: room_remote_data_source.rs
rust/src/features/rooms/data/models/: room_model.rs
rust/src/features/rooms/data/repositories/: room_repository_impl.rs
rust/src/features/rooms/usecases/: get_rooms.rs  get_spaces.rs  send_message_to_room.rs
rust/src/features/sync/: mod.rs
rust/src/features/sync/usecases/: sync_events.rs
rust/src/features/timeline/: mod.rs
rust/src/features/timeline/usecases/: fetch_room_events_by_room_id.rs
(+52 files in other folders)
