[package]
name = "matrix_rust_sdk_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]


[dependencies]
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
anyhow = "1"
imbl = "6.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
tracing-subscriber = "0.3.20"
dirs = "6.0.0"
futures-util = "0.3.31"
once_cell = "1.21.3"
tracing = "0.1.41"
log = "0.4"


# Matrix Dependencies
matrix-sdk = { version = "0.16.0", default-features = false, features = [
    "rustls-tls",
    "e2e-encryption",
    "sqlite",
] }
matrix-sdk-ui = { version = "0.16.0", default-features = false }


# 👇 Add this (same major.minor that matrix-sdk pulls in)
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
async-trait = "0.1.89"
chrono = "0.4.42"
uuid = "1.18.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
