[package]
name = "matrix_rust_sdk_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]


[dependencies]
# praia-dependencies
praia_matrix = { path = "../../praia-rs/crates/praia_matrix" }

flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
anyhow = "1"
futures-util = "0.3.31"
once_cell = "1.21.3"
uuid = "1.21.0"
chrono = { version = "0.4", features = ["serde"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
